--- a/index.html
+++ b/index.html
@@ -26,8 +26,23 @@
             <h4>|</h4> 
             <h4 class="skepsis_css001">SKEPSIS</h4>
         </div>
-        <div class="navlist"></div>
-        <div class="header-right"></div>
+        <div class="navlist">
+            <ul class="navlist_css002">
+                <li><a href="#home">about</a></li>
+                <li><a href="#clubs">clubs</a></li>
+                <li><a href="#events">events</a></li>
+                <li><a href="#team">team</a></li>
+                <li><a href="#contact">contact</a></li>
+            </ul>
+        </div>
+        <div class="header-right">
+            <button class="Befikra-paper-logo" tabindex="0" type="button">
+                <p class="Befikra-paper-logo-name">
+                    lorem ipsum
+                </p>
+                <span class="MuiTouchRipple-root css-w0pj6f"></span>
+            </button>
+        </div>
     </header>
 </body>
 </html>
