--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="header-right">
             <button class="Befikra-paper-logo" tabindex="0" type="button">
                 <p class="Befikra-paper-logo-name">
-                    lorem ipsum
+                    lorem ipsum nmv
                 </p>
                 <span class="MuiTouchRipple-root css-w0pj6f"></span>
             </button>
